--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.html
@@ -3,7 +3,7 @@
   <span class="word--name">{{ word.display }}</span>
   <div class="word--wrap">
     <span class="word--wrap--pinyin">[{{ word.pinyin }}]</span>
-    <span class="word--wrap--chivi">[{{ word.chinaVietnamWord | titlecase }}]</span>
+    <span class="word--wrap--chivi">({{ word.chinaVietnamWord | titlecase }})</span>
     <span class="word--wrap--define">{{ word.define | translate }}</span>
   </div>
   <span class="word--hsk">
