--- a/src/assets/scss/_tab.scss
+++ b/src/assets/scss/_tab.scss
@@ -1,6 +1,6 @@
 ::ng-deep {
   .ant-tabs-nav-wrap {
-    background: $white;
+    background: transparent;
   }
   .ant-tabs-top > .ant-tabs-nav {
     margin-bottom: 0;
