--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -4,6 +4,12 @@
   src: url('../../../../assets/fonts/pinyin.woff') format('woff');
 }
 
+::ng-deep {
+  .ant-dropdown-menu {
+    border-radius: 0.5rem;
+  }
+}
+
 .top {
   margin-bottom: 0.5rem;
   display: flex;
@@ -22,17 +28,36 @@
     cursor: pointer;
   }
   .search-input {
-    margin: 0 0.25rem;
+    margin-left: 0.5rem;
     width: calc(25% + 2rem);
     border-radius: 0.5rem;
     span:hover {
       cursor: pointer;
+      color: $primary-color;
     }
   }
   // .scroll-input {
   //   width: calc(25%);
   //   border-radius: 0.5rem;
   // }
+  .filter {
+    margin-left: 0.5rem;
+    padding: 0.25rem 0.5rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: calc(25%);
+    background: #fff;
+    border: 1px solid rgba($color: $gray, $alpha: 0.3);
+    border-radius: 0.5rem;
+  }
+  .filter:hover {
+    cursor: pointer;
+    span {
+      color: $primary-color;
+    }
+    border: 1px solid rgba($color: $primary-color, $alpha: 0.5);
+  }
   .totals {
     margin-left: auto;
     white-space: nowrap;
@@ -59,10 +84,21 @@
       }
     }
     .search-input {
-      width: calc(50%);
+      width: calc(25% + 1.5rem);
+    }
+    .filter {
+      width: calc(25% + 1.5rem);
+      p {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+      }
     }
     // .scroll-input {
     //   margin-right: 0.25rem;
     // }
+    .totals {
+      margin-left: 0.5rem;
+    }
   }
 }
