--- a/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
+++ b/src/app/pages/dictionary/dictionary-item/dictionary-item.component.scss
@@ -12,7 +12,6 @@
     width: 4.5rem;
     color: $red;
     font-size: 18px;
-    line-height: 100%;
     letter-spacing: 1px;
   }
   &--wrap {
@@ -23,15 +22,18 @@
       margin-left: 0.125rem;
       color: #81a1c1;
       font-size: smaller;
+      font-weight: 500;
     }
     &--pinyin {
       color: $primary-color;
       font-size: smaller;
+      font-weight: 500;
     }
     &--define {
       width: 100%;
-      color: $black;
+      color: $gray;
       font-size: 15px;
+      font-weight: 500;
     }
   }
   &--hsk {
@@ -45,7 +47,7 @@
   }
   &--date {
     width: 100%;
-    color: $gray;
+    color: rgba($color: $gray, $alpha: 0.5);
     font-size: 10px;
     text-align: right;
   }
