--- a/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
+++ b/src/app/pages/dictionary/dictionary-list/dictionary-list.component.scss
@@ -64,13 +64,15 @@
 }
 
 .list {
+  contain: none;
   margin: 0;
+  min-height: 100%;
   height: calc(100vh - 17rem);
   background: #fff;
   border-radius: 0.5rem;
   box-shadow: 0 0 2px 0.5px rgba($color: $gray, $alpha: 0.3) inset;
   overflow: scroll;
-  scroll-snap-type: y mandatory;
+  // scroll-snap-type: y mandatory;
 }
 
 @media screen and (max-width: $mobile) {
@@ -90,4 +92,7 @@
       margin-left: 0.5rem;
     }
   }
+  // .list {
+  //   min-height: 80%;
+  // }
 }
