--- a/src/app/core/layout/navbar/navbar.component.scss
+++ b/src/app/core/layout/navbar/navbar.component.scss
@@ -3,7 +3,8 @@
 .navbar {
   background: $black;
   padding: 1rem calc(3 * 100vw / 12);
-  height: 9rem;
+  // height: 9rem;
+  height: 20vh;
   display: flex;
   flex-flow: row wrap;
   justify-content: space-between;
