--- a/src/app/pages/home/home.component.scss
+++ b/src/app/pages/home/home.component.scss
@@ -33,11 +33,11 @@
   &--star {
     margin: 0.5rem 0;
     grid-template-columns: repeat(1, 1fr);
-    height: 13rem;
+    height: 25vh;
     text-align: center;
     .card {
       padding: 1rem 0;
-      height: 13rem;
+      height: 25vh;
       display: flex;
       flex-flow: column wrap;
       justify-content: center;
