--- a/src/app/shared/modules/audio-list/audio-list.component.scss
+++ b/src/app/shared/modules/audio-list/audio-list.component.scss
@@ -75,7 +75,7 @@
       border-bottom: 0.5px solid rgba($color: $gray, $alpha: 0.5);
     }
     &__title {
-      color: $black;
+      color: $gray;
     }
     .actions {
       position: absolute;
@@ -116,6 +116,7 @@
     .audio {
       border: 2px solid $white;
       .actions {
+        color: rgba($color: $primary-color, $alpha: 0.75);
         &--play {
           opacity: 1;
         }
@@ -123,7 +124,7 @@
     }
     .audio:hover,
     .selected {
-      border: 2px solid $primary-color;
+      border: 2px solid rgba($color: $primary-color, $alpha: 0.75);
     }
   }
 }
