--- a/src/app/shared/modules/audio-list/audio-list.component.scss
+++ b/src/app/shared/modules/audio-list/audio-list.component.scss
@@ -1,6 +1,5 @@
 @import '/src/styles.scss';
 @import 'animation';
-@import 'spinner';
 
 .controls {
   margin-top: 0.5rem;
@@ -79,9 +78,9 @@
     }
     .actions {
       position: absolute;
-      right: 10px;
+      right: 1rem;
       top: calc(50% - 1rem);
-      color: $primary-color;
+      color: rgba($color: $primary-color, $alpha: 0.8);
       font-size: 2rem;
       transition: $transition;
       &--play {
@@ -89,7 +88,7 @@
       }
     }
     .actions:hover {
-      color: rgba($color: $primary-color, $alpha: 0.75);
+      color: rgba($color: $primary-color, $alpha: 0.65);
       text-shadow: 1px 1px 1px 1px $black;
     }
   }
