--- a/src/app/pages/curriculum/curriculum.component.html
+++ b/src/app/pages/curriculum/curriculum.component.html
@@ -1,4 +1,6 @@
-<nz-tabset [nzAnimated]="false">
+<nz-tabset [nzAnimated]="false"
+           [nzSelectedIndex]="tabIndex$ | async"
+           (nzSelectedIndexChange)="onSelectTab($event)">
   <nz-tab [nzTitle]="'HSK 1' | translate">
     <ng-template nz-tab>
       <app-audio-list [audio]="hsk1Audio"></app-audio-list>
