--- a/src/app/pages/exercise/exercise.component.html
+++ b/src/app/pages/exercise/exercise.component.html
@@ -1,4 +1,6 @@
-<nz-tabset [nzAnimated]="false">
+<nz-tabset [nzAnimated]="false"
+           [nzSelectedIndex]="tabIndex$ | async"
+           (nzSelectedIndexChange)="onSelectTab($event)">
   <nz-tab [nzTitle]="'HSK 1' | translate">
     <ng-container class="tab-content">
       <app-audio-list [audio]="hsk1Audio"></app-audio-list>
